--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
       .main-container { grid-template-columns: 1fr; }
       .sidebar { height: 300px; }
     }
+
+    .chapter-list {
+  scroll-behavior: smooth; /* Makes the jump look nice */
+  position: relative;
+}
+
+.chapter-item {
+  transition: background-color 0.3s ease; /* Smooth highlight transition */
+}
   </style>
 </head>
 <body>
