update seamless playing

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <div class="main-container">
     <div class="card sidebar">
       <input type="file" id="epubFile" accept=".epub">
-      <input type="text" id="chapterSearch" placeholder="Search and scroll chapters...">
+      <input type="text" id="chapterSearch" placeholder="Search chapters...">
       <div class="chapter-list" id="chapterList">
-        <p style="padding:10px; color:#999; font-size:0.8rem;">Loading library...</p>
+        <p style="padding:10px; color:#999; font-size:0.8rem;">Loading book...</p>
       </div>
     </div>
     <div class="card content-area">
