--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Audiobook Player</title>
+  <title>Epub Reader</title>
   <style>
     :root { --primary: #3498db; --secondary: #2ecc71; --bg: #f0f2f5; --text: #2c3e50; }
     body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h2>AI Audiobook Player</h2>
+  <h2>Epub Reader</h2>
   <div class="main-container">
     <div class="card sidebar">
       <input type="file" id="epubFile" accept=".epub">
