--- a/index.html
+++ b/index.html
@@ -2,91 +2,91 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epub Audio Library</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Epub Audio Reader</title>
     <style>
-        :root { --primary: #3498db; --bg: #f8f9fa; --text: #2c3e50; }
-        body { font-family: 'Segoe UI', system-ui, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; }
-        
-        /* Library View */
-        .library-view { max-width: 1000px; margin: 40px auto; padding: 20px; }
-        .lib-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; border-bottom: 2px solid #eee; padding-bottom: 15px; }
-        .book-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 25px; }
-        .book-card { background: white; padding: 20px; border-radius: 12px; text-align: center; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.05); position: relative; transition: 0.3s; border: 1px solid #eee; }
-        .book-card:hover { transform: translateY(-5px); box-shadow: 0 8px 15px rgba(0,0,0,0.1); border-color: var(--primary); }
-        .book-card .icon { font-size: 50px; color: var(--primary); display: block; margin-bottom: 10px; }
-        .delete-btn { position: absolute; top: 10px; right: 10px; background: #ff7675; color: white; border: none; border-radius: 50%; width: 24px; height: 24px; cursor: pointer; opacity: 0; transition: 0.2s; }
-        .book-card:hover .delete-btn { opacity: 1; }
+        :root { --primary: #3498db; --bg: #fdfdfd; --text: #2c3e50; --header-h: 60px; --player-h: 115px; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background: var(--bg); color: var(--text); margin: 0; overflow: hidden; }
 
-        /* Reader View */
-        .reader-view { display: none; flex-direction: column; height: 100vh; background: white; }
-        .reader-header { padding: 15px 30px; border-bottom: 1px solid #ddd; display: flex; align-items: center; justify-content: space-between; background: white; }
-        .main-layout { display: grid; grid-template-columns: 320px 1fr; flex: 1; overflow: hidden; }
-        
-        .sidebar { border-right: 1px solid #ddd; display: flex; flex-direction: column; background: #fdfdfd; padding: 15px; }
-        #chapSearch { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 6px; margin-bottom: 10px; box-sizing: border-box; }
-        .chapter-list { flex: 1; overflow-y: auto; border: 1px solid #eee; border-radius: 4px; }
-        .chapter-item { padding: 12px; border-bottom: 1px solid #f5f5f5; cursor: pointer; font-size: 0.9rem; transition: 0.2s; display: flex; gap: 10px; }
-        .chapter-item span { color: #888; min-width: 25px; }
-        .chapter-item:hover { background: #e3f2fd; }
-        .active-chap { background: #e1f5fe !important; border-left: 4px solid var(--primary); font-weight: bold; }
+        /* --- Library View --- */
+        .library-view { height: 100vh; overflow-y: auto; padding: 20px; padding-bottom: 40px; }
+        .lib-header { display: flex; flex-direction: column; gap: 15px; margin-bottom: 25px; border-bottom: 2px solid #eee; padding-bottom: 15px; }
+        .book-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 15px; }
+        .book-card { background: white; padding: 15px; border-radius: 12px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.08); border: 1px solid #eee; position: relative; cursor: pointer; }
+        .book-card .icon { font-size: 40px; display: block; margin-bottom: 10px; }
+        .delete-btn { position: absolute; top: 5px; right: 5px; background: #ff7675; color: white; border: none; border-radius: 50%; width: 28px; height: 28px; font-weight: bold; cursor: pointer; z-index: 2; }
 
-        .content-area { padding: 40px; overflow-y: auto; display: flex; flex-direction: column; align-items: center; line-height: 1.8; }
-        #textDisplay { max-width: 750px; font-size: 1.15rem; color: #333; white-space: pre-wrap; }
+        /* --- Reader View --- */
+        .reader-view { display: none; height: 100vh; flex-direction: column; position: relative; }
+        .reader-header { height: var(--header-h); padding: 0 15px; display: flex; align-items: center; justify-content: space-between; background: white; border-bottom: 1px solid #eee; z-index: 10; }
+        .book-info { display: flex; flex-direction: column; max-width: 60%; }
+        .book-info h3 { margin: 0; font-size: 0.95rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .book-info span { font-size: 0.75rem; color: #888; }
 
-        .audio-bar { background: white; border-top: 1px solid #ddd; padding: 20px; display: flex; flex-direction: column; align-items: center; gap: 10px; }
-        .controls-row { display: flex; gap: 15px; align-items: center; }
-        .btn { padding: 10px 20px; border-radius: 8px; border: none; cursor: pointer; font-weight: 600; }
+        /* --- Sidebar & Search --- */
+        .main-layout { display: flex; flex: 1; overflow: hidden; position: relative; }
+        .sidebar { position: absolute; left: -100%; top: 0; width: 85%; height: 100%; background: white; z-index: 100; transition: 0.3s ease; display: flex; flex-direction: column; padding: 15px; box-shadow: 5px 0 15px rgba(0,0,0,0.1); }
+        .sidebar.active { left: 0; }
+        .overlay { display: none; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 90; }
+        .overlay.active { display: block; }
+        .chapter-list { flex: 1; overflow-y: auto; margin-top: 10px; border: 1px solid #f0f0f0; border-radius: 8px; }
+        .chapter-item { padding: 15px; border-bottom: 1px solid #f9f9f9; cursor: pointer; display: flex; align-items: center; }
+        .active-chap { background: #e3f2fd; color: var(--primary); font-weight: bold; border-left: 4px solid var(--primary); }
+
+        /* --- Content Area --- */
+        .content-area { flex: 1; overflow-y: auto; padding: 25px 20px; line-height: 1.8; font-size: 1.15rem; }
+        #textDisplay { max-width: 800px; margin: 0 auto; color: #333; white-space: pre-wrap; }
+
+        /* --- Player --- */
+        .audio-bar { height: var(--player-h); background: white; border-top: 1px solid #eee; padding: 10px 15px; display: flex; flex-direction: column; gap: 8px; }
+        .controls-row { display: flex; justify-content: space-between; align-items: center; }
+        audio { width: 100%; }
+
+        .btn { padding: 8px 16px; border-radius: 8px; border: none; font-weight: 600; cursor: pointer; }
         .btn-primary { background: var(--primary); color: white; }
-        audio { width: 100%; max-width: 600px; }
-
-        @media (max-width: 800px) { .main-layout { grid-template-columns: 1fr; } .sidebar { display: none; } }
+        @media (min-width: 800px) { .sidebar { position: relative; left: 0; width: 320px; box-shadow: none; border-right: 1px solid #eee; } .overlay { display: none !important; } }
     </style>
 </head>
 <body>
-
     <div id="libraryContainer" class="library-view">
         <div class="lib-header">
-            <h1>My Bookshelf</h1>
-            <div>
-                <input type="file" id="fileInput" accept=".epub" hidden>
-                <button class="btn btn-primary" onclick="document.getElementById('fileInput').click()">+ Upload EPUB</button>
-            </div>
+            <h1>My Books</h1>
+            <input type="file" id="fileInput" accept=".epub" hidden>
+            <button class="btn btn-primary" onclick="document.getElementById('fileInput').click()">+ Upload EPUB</button>
         </div>
         <div id="bookGrid" class="book-grid"></div>
     </div>
 
     <div id="readerContainer" class="reader-view">
+        <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
         <div class="reader-header">
-            <div style="display: flex; align-items: center;">
-                <button class="btn" style="background:#eee" onclick="closeBook()">❮ Bookshelf</button>
-                <h3 id="bookTitleDisplay" style="margin-left: 20px; margin-right: 10px;"></h3>
-                <span id="chapterNumberDisplay" style="color: #888; font-size: 0.9rem; padding-top: 4px;"></span>
-            </div>
+            <button class="btn" style="background:#f0f0f0" onclick="closeBook()">❮</button>
+            <div class="book-info"><h3 id="bookTitleDisplay">Title</h3><span id="chapterNumberDisplay">Chapter --</span></div>
+            <button onclick="toggleMenu()" style="background:none; border:none; font-size:24px;">☰</button>
         </div>
         <div class="main-layout">
-            <div class="sidebar">
-                <input type="text" id="chapSearch" placeholder="Search chapters...">
+            <div class="sidebar" id="sidebar">
+                <strong>Contents</strong>
+                <input type="text" id="chapSearch" placeholder="Search number..." style="width:100%; padding:12px; margin-top:10px; border:1px solid #ddd; border-radius:8px;">
                 <div id="chapterList" class="chapter-list"></div>
             </div>
-            <div class="content-area">
-                <div id="textDisplay">Select a chapter...</div>
-            </div>
+            <div class="content-area" id="contentArea"><div id="textDisplay"></div></div>
         </div>
         <div class="audio-bar">
             <div class="controls-row">
-                <select id="speedSelect">
+                <select id="speedSelect" style="padding:8px; border-radius:6px;">
                     <option value="0.75">0.75x</option>
                     <option value="1.0" selected>1.0x</option>
+                    <option value="1.25">1.25x</option>
                     <option value="1.5">1.5x</option>
                     <option value="2.0">2.0x</option>
                 </select>
-                <button id="genBtn" class="btn btn-primary" onclick="generateTTS()">Generate Audio</button>
+                <button id="genBtn" class="btn btn-primary" onclick="generateTTS()">Read Aloud</button>
             </div>
             <audio id="player" controls></audio>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
     <script src="app.js"></script>
