--- a/index.html
+++ b/index.html
@@ -1,313 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Epub Audio Reader</title>
+    <style>
+        :root {
+            --primary: #3498db;
+            --bg: #fdfdfd;
+            --text: #2c3e50;
+            --header-h: 60px;
+        }
 
-<title>Epub Audio Reader</title>
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
-<style>
-:root {
-  --primary: #3498db;
-  --bg: #fdfdfd;
-  --text: #2c3e50;
-  --header-h: 60px;
-  --player-h: 115px;
-}
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            background: var(--bg);
+            color: var(--text);
+            margin: 0;
+            overflow: hidden; /* Prevent double scrollbars */
+        }
 
-* {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-}
+        /* LIBRARY */
+        .library-view { height: 100dvh; overflow-y: auto; padding: 20px 20px 40px; }
+        .lib-header { display: flex; flex-direction: column; gap: 15px; margin-bottom: 25px; border-bottom: 2px solid #eee; padding-bottom: 15px; }
+        .book-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 15px; }
+        .book-card { 
+            display: flex; flex-direction: column; background: white; padding: 15px; border-radius: 12px; 
+            text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.08); border: 1px solid #eee; position: relative; cursor: pointer;
+        }
+        .book-card .icon { font-size: 40px; margin-bottom: 10px; }
+        .delete-btn { position: absolute; top: 5px; right: 5px; background: #ff7675; color: white; border: none; border-radius: 50%; width: 28px; height: 28px; font-weight: bold; cursor: pointer; }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  background: var(--bg);
-  color: var(--text);
-  margin: 0;
-  overflow-y: auto;
-}
+        /* READER */
+        .reader-view { display: none; height: 100dvh; flex-direction: column; }
+        .reader-header { 
+            height: var(--header-h); padding: 0 15px; display: flex; align-items: center; 
+            justify-content: space-between; background: white; border-bottom: 1px solid #eee; z-index: 20; 
+        }
+        
+        .nav-controls { display: flex; align-items: center; gap: 10px; }
+        .book-info { display: flex; flex-direction: column; max-width: 40%; }
+        .book-info h3 { margin: 0; font-size: 0.85rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .book-info span { font-size: 0.7rem; color: #888; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-/* ---------------- LIBRARY ---------------- */
-.library-view {
-  height: 100dvh;
-  overflow-y: auto;
-  padding: 20px 20px 40px;
-}
+        .main-layout { flex: 1; display: flex; overflow: hidden; position: relative; }
+        .sidebar { 
+            position: absolute; left: -100%; top: 0; width: 85%; height: 100%; background: white; 
+            z-index: 100; transition: 0.3s ease; display: flex; flex-direction: column; padding: 15px; box-shadow: 5px 0 15px rgba(0,0,0,0.1); 
+        }
+        .sidebar.active { left: 0; }
+        .overlay { display: none; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 90; }
+        .overlay.active { display: block; }
 
-.lib-header {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-bottom: 25px;
-  border-bottom: 2px solid #eee;
-  padding-bottom: 15px;
-}
+        .chapter-list { flex: 1; overflow-y: auto; margin-top: 10px; border: 1px solid #f0f0f0; border-radius: 8px; }
+        .chapter-item { padding: 12px 15px; border-bottom: 1px solid #f9f9f9; cursor: pointer; font-size: 0.9rem; line-height: 1.4; }
+        .active-chap { background: #e3f2fd; color: var(--primary); font-weight: bold; border-left: 4px solid var(--primary); }
 
-.book-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-  gap: 15px;
-}
+        .content-area { flex: 1; overflow-y: auto; padding: 25px 20px; line-height: 1.8; font-size: 1.15rem; }
+        #textDisplay { max-width: 800px; margin: 0 auto; white-space: pre-wrap; }
 
-.book-card {
-    display: flex;
-    flex-direction: column;
-    background: white;
-    padding: 15px;
-    border-radius: 12px;
-    text-align: center;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    border: 1px solid #eee;
-    position: relative;
-    cursor: pointer;
-}
+        /* AUDIO BAR */
+        .audio-bar { 
+            position: sticky; bottom: 0; z-index: 30; background: white; border-top: 1px solid #eee; 
+            padding: 10px 15px; padding-bottom: calc(10px + env(safe-area-inset-bottom)); display: flex; flex-direction: column; gap: 8px; 
+        }
+        .controls-row { display: flex; justify-content: space-between; align-items: center; }
+        audio { width: 100%; height: 35px; }
+        .btn { padding: 8px 12px; border-radius: 6px; border: 1px solid #ddd; background: #fff; cursor: pointer; font-size: 14px; }
+        .btn-primary { background: var(--primary); color: white; border: none; }
+        .nav-btn { font-size: 18px; font-weight: bold; }
 
-.book-card .icon {
-  font-size: 40px;
-  margin-bottom: 10px;
-}
-
-.delete-btn {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background: #ff7675;
-  color: white;
-  border: none;
-  border-radius: 50%;
-  width: 28px;
-  height: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-/* ---------------- READER ---------------- */
-.reader-view {
-  display: none;
-  height: 100dvh;
-  flex-direction: column;
-}
-
-/* Header */
-.reader-header {
-  height: var(--header-h);
-  padding: 0 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: white;
-  border-bottom: 1px solid #eee;
-  z-index: 20;
-}
-
-.book-info {
-  display: flex;
-  flex-direction: column;
-  max-width: 60%;
-}
-
-.book-info h3 {
-  margin: 0;
-  font-size: 0.95rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.book-info span {
-  font-size: 0.75rem;
-  color: #888;
-}
-
-/* Layout */
-.main-layout {
-  flex: 1;
-  display: flex;
-  overflow: hidden;
-  position: relative;
-}
-
-/* Sidebar */
-.sidebar {
-  position: absolute;
-  left: -100%;
-  top: 0;
-  width: 85%;
-  height: 100%;
-  background: white;
-  z-index: 100;
-  transition: 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  box-shadow: 5px 0 15px rgba(0,0,0,0.1);
-}
-
-.sidebar.active {
-  left: 0;
-}
-
-.overlay {
-  display: none;
-  position: absolute;
-  inset: 0;
-  background: rgba(0,0,0,0.4);
-  z-index: 90;
-}
-
-.overlay.active {
-  display: block;
-}
-
-.chapter-list {
-  flex: 1;
-  overflow-y: auto;
-  margin-top: 10px;
-  border: 1px solid #f0f0f0;
-  border-radius: 8px;
-}
-
-.chapter-item {
-  padding: 15px;
-  border-bottom: 1px solid #f9f9f9;
-  cursor: pointer;
-}
-
-.active-chap {
-  background: #e3f2fd;
-  color: var(--primary);
-  font-weight: bold;
-  border-left: 4px solid var(--primary);
-}
-
-/* Content */
-.content-area {
-  flex: 1;
-  overflow-y: auto;
-  padding: 25px 20px;
-  line-height: 1.8;
-  font-size: 1.15rem;
-}
-
-#textDisplay {
-  max-width: 800px;
-  margin: 0 auto;
-  white-space: pre-wrap;
-}
-
-/* ---------------- AUDIO ---------------- */
-.audio-bar {
-  position: sticky;
-  bottom: 0;
-  z-index: 30;
-  background: white;
-  border-top: 1px solid #eee;
-  padding: 10px 15px;
-  padding-bottom: calc(10px + env(safe-area-inset-bottom));
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.controls-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-audio {
-  width: 100%;
-}
-
-/* Buttons */
-.btn {
-  padding: 8px 16px;
-  border-radius: 8px;
-  border: none;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.btn-primary {
-  background: var(--primary);
-  color: white;
-}
-
-/* Desktop */
-@media (min-width: 800px) {
-  .sidebar {
-    position: relative;
-    left: 0;
-    width: 320px;
-    box-shadow: none;
-    border-right: 1px solid #eee;
-  }
-  .overlay {
-    display: none !important;
-  }
-}
-</style>
+        @media (min-width: 800px) {
+            .sidebar { position: relative; left: 0; width: 320px; box-shadow: none; border-right: 1px solid #eee; }
+            .overlay { display: none !important; }
+        }
+    </style>
 </head>
-
 <body>
 
-<!-- LIBRARY -->
 <div id="libraryContainer" class="library-view">
-  <div class="lib-header">
-    <h1>My Books</h1>
-    <input type="file" id="fileInput" accept=".epub" hidden />
-    <button class="btn btn-primary" onclick="fileInput.click()">+ Upload EPUB</button>
-  </div>
-  <div id="bookGrid" class="book-grid"></div>
+    <div class="lib-header">
+        <h1>My Books</h1>
+        <input type="file" id="fileInput" accept=".epub" hidden />
+        <button class="btn btn-primary" onclick="fileInput.click()">+ Upload EPUB</button>
+    </div>
+    <div id="bookGrid" class="book-grid"></div>
 </div>
 
-<!-- READER -->
 <div id="readerContainer" class="reader-view">
-  <div id="overlay" class="overlay" onclick="toggleMenu()"></div>
+    <div id="overlay" class="overlay" onclick="toggleMenu()"></div>
+    <div class="reader-header">
+        <button class="btn" onclick="closeBook()">❮</button>
+        
+        <div class="nav-controls">
+            <button class="btn nav-btn" onclick="prevChapter()">‹</button>
+            <div class="book-info">
+                <h3 id="bookTitleDisplay">Title</h3>
+                <span id="chapterNumberDisplay">Loading...</span>
+            </div>
+            <button class="btn nav-btn" onclick="nextChapter()">›</button>
+        </div>
 
-  <div class="reader-header">
-    <button class="btn" onclick="closeBook()">❮</button>
-    <div class="book-info">
-      <h3 id="bookTitleDisplay">Title</h3>
-      <span id="chapterNumberDisplay">Chapter --</span>
-    </div>
-    <button onclick="toggleMenu()" style="background:none;border:none;font-size:24px;">☰</button>
-  </div>
-
-  <div class="main-layout">
-    <div id="sidebar" class="sidebar">
-      <strong>Contents</strong>
-      <input id="chapSearch" placeholder="Search chapter..." style="margin-top:10px;padding:12px;border-radius:8px;border:1px solid #ddd;" />
-      <div id="chapterList" class="chapter-list"></div>
+        <button onclick="toggleMenu()" style="background:none;border:none;font-size:24px;">☰</button>
     </div>
 
-    <div class="content-area">
-      <div id="textDisplay"></div>
+    <div class="main-layout">
+        <div id="sidebar" class="sidebar">
+            <strong>Contents</strong>
+            <input id="chapSearch" placeholder="Search chapters..." style="margin-top:10px;padding:12px;border-radius:8px;border:1px solid #ddd;" />
+            <div id="chapterList" class="chapter-list"></div>
+        </div>
+        <div class="content-area" id="contentArea">
+            <div id="textDisplay"></div>
+        </div>
     </div>
-  </div>
 
-  <div class="audio-bar">
-    <div class="controls-row">
-      <select id="speedSelect">
-        <option value="0.75">0.75x</option>
-        <option value="1" selected>1.0x</option>
-        <option value="1.25">1.25x</option>
-        <option value="1.5">1.5x</option>
-        <option value="2">2.0x</option>
-      </select>
-      <button id="genBtn" class="btn btn-primary" onclick="generateTTS()">Read Aloud</button>
+    <div class="audio-bar">
+        <div class="controls-row">
+            <select id="speedSelect">
+                <option value="0.75">0.75x</option>
+                <option value="1" selected>1.0x</option>
+                <option value="1.25">1.25x</option>
+                <option value="1.5">1.5x</option>
+                <option value="2">2.0x</option>
+            </select>
+            <button id="genBtn" class="btn btn-primary" onclick="generateTTS()">Read Aloud</button>
+        </div>
+        <audio id="player" controls playsinline></audio>
     </div>
-    <audio id="player" controls playsinline></audio>
-  </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
 <script src="app.js"></script>
-
 </body>
 </html>
