--- a/index.html
+++ b/index.html
@@ -45,8 +45,44 @@
     </div>
 
     <div class="card content-area">
-      <div id="textDisplay" class="text-container"><p id="displayText">Select a chapter to start...</p></div>
+
       
+      <div 
+        id="textDisplay" 
+        class="text-container"
+        style="position:relative;"
+      >
+        <button
+          id="copyBtn"
+          onclick="copyTextToClipboard()"
+          style="
+            position:absolute;
+            top:10px;
+            right:20px;
+            display:flex;
+            align-items:center;
+            justify-content:center;
+            width:28px;
+            height:28px;
+            background:transparent;
+            border:none;
+            border-radius:6px;
+            font-size:14px;
+            color:#6b7280;
+            cursor:pointer;
+            transition:all 0.15s ease;
+          "
+          onmouseover="this.style.background='rgba(0,0,0,0.06)'; this.style.color='#111';"
+          onmouseout="this.style.background='transparent'; this.style.color='#6b7280';"
+          onmousedown="this.style.transform='scale(0.95)'"
+          onmouseup="this.style.transform='scale(1)'"
+        >
+          ⧉ Copy Text
+        </button>
+
+        <p id="displayText">Select a chapter to start...</p>
+      </div>
+ 
       <div class="controls">
         <div id="statusInfo"></div>
         
